@@ -1,12 +1,15 @@
 run-1.47（进行中）
 ------------------------------------------------------------------------
-暂无内容
+1.弃用InstaPy自带的中断捕捉函数
+    a.自行捕捉SIGINT、SIGTERM、SIGKILL三种信号
+    b.自行清理现场。包括kill所有子进程，释放proxypool。稳定性比之前提高不少
 
 
 droplet-1.04（进行中）
 ------------------------------------------------------------------------
 1.配合前端、脚本两方面的需求，droplet服务在开启新login脚本时，默认设定2次重新登录机会
 2.脚本从1.45到1.46改变了部分参数，导致无法重启脚本。此版本暂时对这个问题进行临时性的兼容
+3.登录脚本使用rotating proxy
 
 
 run-1.46
